# deepdive_kai0

./: .gitignore  .gitmodules  CLAUDE.md  install.sh  install_kai0.sh  scratch_build_xvla.py  setup_env.sh
lmvla/: .gitignore  README.md  pyproject.toml
lmvla/crave/: README.md
lmvla/crave/docs/: CRAVE_overview.md  CRAVE_positioning_and_roadmap.md  HISTORY.md  README.md  STATUS.md  awbc_milestone_value_AB_plan.md  clustering_method_comparison.md  crave_rpo_minimal_validation_plan.md  cross_dataset_validation.md  cross_episode_recurrence_value_METHOD.md  decoder_benchmark.md  em_hmm_negative_result.md  encoders.md  greedy_vs_maxprod_aliasing.md  milestone_centroid_decoding.md  multitask_value.md  online_readout_route.md  recurrence_field_architecture_v2.md  sym_adaptive_vote.md  viterbi_computation.md
lmvla/crave/experiments/: ae_pn_4panel.py  alias_visual_proof.py  aloha_extract_base.py  argmin_jump_analysis.py  cluster_method_compare.py  cluster_method_full.py  cluster_progress_profile.py  crave_b2_failure_signal.py  crave_causal_dp_test.py  crave_cluster_flow_3d.py  crave_cluster_gallery.py  crave_coffee_feat_test.py  crave_cummax_demo.py  crave_ep2302_3path.py  crave_ep2302_covgate_video.py  crave_freq_3way.py  crave_full_7b_centroid.py  crave_full_cluster.py  crave_milestone_count_ablation.py  crave_recur_compare.py  crave_recurrence_illust.py  crave_vs_ae_autonomy.py  crave_wanvae_centroid.py  cross_dataset_transition.py  cross_encoder_cluster_analysis.py  cross_encoder_otsu.py  decode_centroids_xvla.py  decode_centroids_xvla_gallery.py  decoder_benchmark.py  dump_polyline_labels_kai_full.py  em_hmm_vs_kmeans.py  encoder_coverage_compare.py  encoder_escape_analysis.py  extract_30hz_all.py  extract_30hz_fast.py  extract_30hz_robust.py  extract_base_bank.py  extract_dagger_chunk001_d3b.py  gen_final_ae_labels.py  gen_final_joint.py  (+37 more)
lmvla/docs/: ENVIRONMENTS_map_2026-07-20.md  ENV_SELECTION_RULES.md  README.md  architecture_overview.md  glossary.md  roadmap.md
lmvla/lmwam/: .gitignore  STORAGE_LAYOUT.md  build_env.sh  build_libero_env.sh  dl_libero_dataset.py  dl_weights.py  drive_revalidate.sh  install_libero.sh  install_libero_lean.sh  lmwm_adapter.py  lmwm_milestone_target.py  robotwin_python_wrapper.sh  run_libero_eval.sh  run_lmwm_vs_lawm_seeds.sh  run_robotwin_eval.sh
lmvla/lmwm/: .gitignore  README.md  pyproject.toml
lmvla/lmwm/configs/: README.md
lmvla/lmwm/docs/: ABLATION_CONVERGENCE_2026-07.md  ANALYSIS_wm_by_task_scenario_2026-07-19.md  ARCH_LMWM_final_2026-07-20.md  ARCH_predictor_vs_single_2026-07-21.md  DESIGN_pi05_P0_scaffolding_2026-07-21.md  MASTER_PLAN_lmwm_vla_2026-07.md  PLAN_new_crave_on_lmwm_2026-07-10.md  PLAN_pi05_lmwm_sameencoder_2026-07-21.md  README.md  RECURRENCE_UNIVERSAL_goals_and_roadmap.md  _robotwin_warp_shim.py.txt
lmvla/lmwm/scripts/: README.md  _run_dim_sweep.sh  _run_dim_sweep_py.py  align_lawm_forecast.py  analyze_identity_branching_bymode.py  analyze_identity_conditioning.py  analyze_lmwm_predictions.py  analyze_milestone_multimodality.py  build_pair_recurrence_graph.py  build_recurrence_graph.py  build_robotwin_v30_subset.py  calibrate_lmwm_confidence.py  check_rvalley_env_consistency.py  check_so400m_env_consistency.py  code_factorized_subgoal.py  compare_milestone_spaces.py  decode_best.py  diagnose_ceiling.py  dinov3h_gated.py  eval_future_transition.py  eval_lawm_lam.py  eval_mean_variance.py  eval_phase_b.py  eval_proto_subgoal.py  eval_real_future.py  eval_runtime_policy.py  eval_siglip_oracle.py  exp_single_vs_twomodel.py  export_augmented_input_pairs.py  export_crave_sequences.py  export_dinov3h_milestone_pairs.py  export_episode_medoid_pairs.py  export_feature_milestone_pairs.py  export_history_pairs.py  (+101 more)
lmwam(lmvla)/crave/: MIGRATION.md  pyproject.toml
(+1695 files in other folders)
