[project]
name = "lmwm"
version = "0.1.0"
description = "Latent Milestone World Model for CRAVE recurrence-state dynamics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "torch>=2.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["src", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
